--- a/LiteTube/PlaylistsManagePage.xaml
+++ b/LiteTube/PlaylistsManagePage.xaml
@@ -45,6 +45,7 @@
               Grid.RowSpan="3"
               Opacity="0.7"/>
         
+        <!--Playlist creation form-->
         <Grid Grid.Row="1"
               Grid.RowSpan="2"
               Name="NewPlaylistLayout"
@@ -95,7 +96,12 @@
                 </Grid>
             </StackPanel>
         </Grid>
-        
+
+        <!--Block when delete-->
+        <controls:DeletingBlockControl  Grid.Row="0"
+                                        Grid.RowSpan="3"
+                                        DataContext="{Binding PlaylistListViewModel}"/>
+            
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
