--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -50,6 +50,15 @@
                    HorizontalAlignment="Center"
                    Tap="BackgroundPopup_Tap"/>
 
+        <!--<StackPanel Orientation="Vertical" 
+                    Grid.Column="1"
+                    HorizontalAlignment="Left">
+            <TextBlock Text="{Binding Memory}" Foreground="White"/>
+            <TextBlock Text="{Binding TotalMemory}" Foreground="White"/>
+        </StackPanel>-->
+        
+        
+
         <Button Grid.Column="2" 
                 Grid.Row="0"
                 Style="{StaticResource NavigationControlButtonStyle}"
