--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -114,7 +114,7 @@
                 HorizontalAlignment="Left"
                 Background="{StaticResource PhoneSecondaryBackgroundBrush}"
                 Height="100"
-                Width="153"
+                Width="165"
                 Margin="2">
 
                 <Image Stretch="UniformToFill">
@@ -127,12 +127,27 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
-                        Background="Black"
+                        Background="#66000000"
                         Padding="4,0,4,0">
                     <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
                                 TextWrapping="NoWrap" 
                                 Foreground="White"
                                 FontSize="14"/>
+                </Border>
+
+                <Border Margin="2"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Left"
+                        Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
+                        Background="#66000000"
+                        Padding="4,0,4,0">
+                    <TextBlock TextWrapping="NoWrap"
+                               Foreground="White"
+                               FontSize="14">
+                        <Run Text="&#xE890;"
+                             FontFamily="Segoe MDL2 Assets"/>
+                        <Run Text="{Binding ViewCount}" />
+                    </TextBlock>
                 </Border>
             </Grid>
 
@@ -146,12 +161,12 @@
                             Style="{StaticResource PhoneTextSmallStyle}"
                             TextWrapping="NoWrap"/>
                 <TextBlock TextWrapping="NoWrap"
-                            Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
-                            Style="{StaticResource PhoneTextSmallStyle}" 
-                            FontSize="18">
-                            <!--Foreground="#FF67217A">-->
-                    <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
-                    <Run Text="{Binding PublishedAt}" />
+                               Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
+                               Style="{StaticResource PhoneTextSmallStyle}" 
+                               FontSize="18">
+                               <!--Foreground="#FF67217A">-->
+                        <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
+                        <Run Text="{Binding PublishedAt}" />
                 </TextBlock>
             </StackPanel>
         </Grid>
@@ -163,20 +178,20 @@
             <local:ListBoxTemplateSelector.Normal>
                 <DataTemplate>
                     <Grid Background="{Binding IsNowPlaying, Converter={StaticResource ColorValueConverter}}">
-                        <Grid.ColumnDefinitions>
+                        <!--<Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                        </Grid.ColumnDefinitions>-->
             
                         <ContentPresenter Content="{Binding}"
                                           ContentTemplate="{StaticResource LoadingListViewItemNoMenu}"/>
 
-                        <ToggleButton Grid.Column="1"
+                        <!--<ToggleButton Grid.Column="1"
                                       Visibility="{Binding IsContexMenu, Converter={StaticResource BooleanToVisibilityConverter}}"
                                       Style="{StaticResource MoreButtonStyle}"
                                       x:Name="moreButton">
                             <ContentPresenter ContentTemplate="{StaticResource MoreIcon}" />
-                        </ToggleButton>
+                        </ToggleButton>-->
 
                         <toolkit:ContextMenuService.ContextMenu>
                             <toolkit:ContextMenu Name="ContextMenu"
@@ -228,7 +243,7 @@
                               HorizontalAlignment="Left"
                               Background="{StaticResource PhoneSecondaryBackgroundBrush}"
                               Height="100"
-                              Width="153">
+                              Width="165">
 
                             <Image Stretch="UniformToFill">
                                 <Image.Source>
@@ -281,20 +296,20 @@
             <local:ListBoxTemplateSelector.Normal>
                 <DataTemplate>
                     <Grid Margin="0,0,0,5">
-                        <Grid.ColumnDefinitions>
+                        <!--<Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+                        </Grid.ColumnDefinitions>-->
 
                         <ContentPresenter Content="{Binding}"
                                         ContentTemplate="{StaticResource LoadingPlaylistListViewItem}"/>
 
-                        <ToggleButton Grid.Column="1"
+                        <!--<ToggleButton Grid.Column="1"
                                       Visibility="{Binding IsContexMenu, Converter={StaticResource BooleanToVisibilityConverter}}"
                                       Style="{StaticResource MoreButtonStyle}"
                                       x:Name="moreButton">
                             <ContentPresenter ContentTemplate="{StaticResource MoreIcon}" />
-                        </ToggleButton>
+                        </ToggleButton>-->
                             
                         <toolkit:ContextMenuService.ContextMenu>
                             <toolkit:ContextMenu Name="ContextMenu"
