--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -127,7 +127,7 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
-                        Background="#66000000"
+                        Background="#88000000"
                         Padding="4,0,4,0">
                     <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
                                 TextWrapping="NoWrap" 
@@ -139,14 +139,14 @@
                         VerticalAlignment="Top"
                         HorizontalAlignment="Left"
                         Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
-                        Background="#66000000"
+                        Background="#88000000"
                         Padding="4,0,4,0">
                     <TextBlock TextWrapping="NoWrap"
                                Foreground="White"
                                FontSize="14">
                         <Run Text="&#xE890;"
                              FontFamily="Segoe MDL2 Assets" FontSize="12"/>
-                        <Run Text="{Binding ViewCount}" />
+                        <Run Text="{Binding ViewCount, Converter={StaticResource NumberToStringConverter}}" />
                     </TextBlock>
                 </Border>
             </Grid>
@@ -268,7 +268,7 @@
                                        MaxHeight="54"/>
                             <TextBlock Style="{StaticResource PhoneTextSmallStyle}"
                                        TextWrapping="NoWrap">
-                                <Run Text="{Binding ItemsCount}" />
+                                <Run Text="{Binding ItemsCount, Converter={StaticResource NumberToStringConverter}}" />
                                 <Run Text="{Binding Path=LocalizedResources.videos, Source={StaticResource LocalizedStrings}}"/>
                             </TextBlock>
                             <TextBlock TextWrapping="NoWrap"
