--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -141,13 +141,14 @@
                         Visibility="{Binding Duration, Converter={StaticResource ResourceKey=ObjectToVisibilityConverter}}"
                         Background="#88000000"
                         Padding="4,0,4,0">
-                    <TextBlock TextWrapping="NoWrap"
-                               Foreground="White"
-                               FontSize="14">
-                        <Run Text="&#xE890;"
-                             FontFamily="Segoe MDL2 Assets" FontSize="12"/>
-                        <Run Text="{Binding ViewCount, Converter={StaticResource NumberToStringConverter}}" />
-                    </TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <ContentPresenter ContentTemplate="{StaticResource ViewIcon}"/>
+                        <TextBlock TextWrapping="NoWrap"
+                                   Foreground="White"
+                                   FontSize="14"
+                                   Margin="5,0,0,0"
+                                   Text="{Binding ViewCount, Converter={StaticResource NumberToStringConverter}}"/>
+                    </StackPanel>
                 </Border>
             </Grid>
 
