--- a/LiteTube/Themes/Icons.xaml
+++ b/LiteTube/Themes/Icons.xaml
@@ -139,4 +139,13 @@
               Fill="{StaticResource PlaylistSelectedBrush}" 
               Data="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z" />
     </DataTemplate>
+
+    <DataTemplate x:Key="ViewIcon">
+        <Path Width="14" 
+              Height="10" 
+              Stretch="Fill"
+              Fill="White" 
+              Data="M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,4.5C17,4.5 21.27,7.61 23,12C21.27,16.39 17,19.5 12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C15.76,17.5 19.17,15.36 20.82,12C19.17,8.64 15.76,6.5 12,6.5C8.24,6.5 4.83,8.64 3.18,12Z" />
+    </DataTemplate>
+    
 </ResourceDictionary>
