--- a/LiteTube/Donate.xaml
+++ b/LiteTube/Donate.xaml
@@ -16,23 +16,46 @@
     Style="{StaticResource PageThemeStyle}"
     shell:SystemTray.IsVisible="True">
 
-
+    <phone:PhoneApplicationPage.Resources>
+        <Thickness x:Key="ButtonMargin">0,12,0,12</Thickness>
+    </phone:PhoneApplicationPage.Resources>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" 
           Background="{StaticResource PhoneBackgroundBrush}">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
         <TextBlock Text="{Binding Path=LocalizedResources.Donate, Source={StaticResource LocalizedStrings}}" 
-                   Style="{StaticResource TitleTextBlockStyle}"/>
+                   Style="{StaticResource TitleTextBlockStyle}" 
+                   Margin="12,0,12,0"/>
+
+        <!-- Description contains the name of the application and page title-->
+        <TextBlock Text="{Binding Path=LocalizedResources.DonationDescription, Source={StaticResource LocalizedStrings}}" 
+                   Style="{StaticResource PhoneTextSmallStyle}" 
+                   Margin="12,12,12,0"
+                   Grid.Row="1"/>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" 
-              Grid.Row="1"
-              Margin="24,12,24,0">
+        <StackPanel Orientation="Vertical"
+                    Margin="{StaticResource DefaultControlMargin}"
+                    Grid.Row="2">
+
+            <Button Content="{Binding Small}"
+                    Command="{Binding Donate1Command}"/>
+
+            <Button Content="{Binding Medium}"
+                    Command="{Binding Donate2Command}"/>
+
+            <Button Content="{Binding Large}"
+                    Command="{Binding Donate3Command}"/>
+
+        </StackPanel>
+        <!--<Grid x:Name="ContentPanel" 
+              Grid.Row="2">
             <ListBox toolkit:TiltEffect.IsTiltEnabled="True" >
                 <ListBoxItem VerticalContentAlignment="Center"
                              common:ItemClickCommand.Command="{Binding Donate1Command}"
@@ -50,7 +73,7 @@
                     <TextBlock Text="{Binding Large}" />
                 </ListBoxItem>
             </ListBox>
-        </Grid>
+        </Grid>-->
     </Grid>
 
 </phone:PhoneApplicationPage>
