--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -104,7 +104,7 @@
                                            Click="About_Click"/>
                 <controls:NavigationButton Text="{Binding Path=LocalizedResources.Donate, Source={StaticResource LocalizedStrings}, Converter={StaticResource LowerCaseConverter}}"
                                            Width="{StaticResource MenuWidth}"
-                                           Click="Donate_Click"/>
+                                           Command="{Binding DonateCommand}"/>
                 <Rectangle Height="1"
                            Width="{StaticResource MenuWidth}"
                            Fill="{StaticResource NavigationPanelButtonPressedBackgroundBrush}"/>
